<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <Button
                android:id="@+id/btntest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btntest">
            </Button>
            <ImageButton
                android:id="@+id/btnImage1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content1"
                android:src="@drawable/star_be_ti">
            </ImageButton>
            <Button
                android:id="@+id/btnexit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnexit">
            </Button>
        </TableRow>
    </TableLayout>
    <EditText
        android:id="@+id/txtName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ed_message">
    </EditText>
    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb1"/>
        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb2"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/chkAutosave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkautosave">
        </CheckBox>
        <CheckBox
            android:id="@+id/star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star"/>
        <ToggleButton
            android:id="@+id/toggle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ff1e00"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:text="@string/txt1"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/image1"
            android:src="@drawable/ca_lia_thia_1"
            android:contentDescription="@string/content2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="invisible"/>
        <ImageView
            android:id="@+id/image2"
            android:src="@drawable/ca_lia_thia_2"
            android:contentDescription="@string/content3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="invisible"/>
    </LinearLayout>
<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Hello World!"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

</LinearLayout>